<resources>
    <string name="app_name">Brandstore</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_custom_edit_text">CustomEditText</string>
    <string name="title_activity_search">Search</string>
    <string name="home_page_search_box_hint">  Enter a brand/category</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_outlet_list">OutletList</string>
    <string name="title_activity_outlet_details">OutletDetails</string>

    <string name="nav_item_categories">Categories</string>
    <string name="nav_item_favorite">My Favorites</string>
    <string name="nav_item_sale">On Sale</string>
    <string name="nav_item_takeMeThere">Take me there</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_splashscreen">SplashScreenActivity</string>

    <string name="error_updateapp">This version of Brandstore is invalid. Please update your app from the Play Store to keep using Brandstore.</string>

    <string name="ga_category_search_activity">SuggestionEventCategory</string>
    <string name="ga_action_search_suggestion">SuggestionEventAction</string>


    <string name="login_password">Password</string>
    <string name="login_email">Email</string>
    <string name="login_signin">Sign In</string>
    <string name="login_forgot_password"><u>FORGOT PASSWORD?</u></string>
    <string name="login_signup"><u>Sign Up</u></string>

    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="signup_label">Sign Up</string>
    <string name="signup_name">Name</string>
    <string name="signup_last_name">Last Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_password">Confirm Password</string>
    <string name="signup_gender">Gender</string>
    <string name="signup_gender_male">Male</string>
    <string name="signup_gender_female">Female</string>
    <string name="signup_dob">Date of birth</string>
    <string name="signup_button">Sign Up</string>

    <string name="gcm_defaultSenderId">829391307534</string>
    <string name="facebook_app_id">639654116137392</string>


    <string name="outlet_details_label_similarstores">SIMILAR STORES</string>
    <string name="outlet_details_label_comingsoon">Coming soon…</string>
    <string name="search_box_hint">\"Let\'s go shopping!\"</string>
    <string name="sort_by">SORT BY</string>
    <string name="relevance">Relevance</string>
    <string name="average_low_to_high">Average Price ( Low to High )</string>
    <string name="average_high_to_low">Average Price ( High to Low )</string>
    <string name="average_price">AVERAGE PRICE (₹)</string>
    <string name="floor">Floor</string>
    <string name="gender">GENDER (For products in outlet)</string>
    <string name="more_filters">MORE FILTERS</string>
    <string name="apply_filters">APPLY FILTERS</string>
    <string name="overlay_tap_anywhere">TAP ANYWHERE TO CONTINUE</string>
    <string name="overlay_we_are_currently_at">We are currently only available at Phoenix Market City, Bangalore</string>


</resources>
