<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- group with single selected item so only one item is highlighted in the nav menu -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_categories"
            android:icon="@drawable/nav_drawer_category"
            android:title="@string/nav_item_categories"
            android:checked="true"/>
        <item
            android:id="@+id/drawer_item_favorite"
            android:icon="@drawable/nav_drawer_favourite"
            android:title="@string/nav_item_favorite"/>
        <item
            android:id="@+id/drawer_item_sale"
            android:icon="@drawable/nav_drawer_sale"
            android:title="@string/nav_item_sale"/>
        <item
            android:id="@+id/drawer_item_takeMeThere"
            android:icon="@drawable/nav_drawer_tmt"
            android:title="@string/nav_item_takeMeThere"/>
    </group>
</menu>