<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brandstore1.activities.LoginActivity"
    android:background="@drawable/loginbg"
    android:alpha="1"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/brandstorelogo"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_ll1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:gravity="center_vertical|center_horizontal"
        >


        <EditText
            android:id="@+id/login_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shapeloginedittext"
            android:alpha="1"
            android:textColor="@color/white"
            android:hint="@string/login_email"
            android:textColorHint="@color/white"
            />
        <EditText
            android:id="@+id/login_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shapeloginedittext"
            android:alpha="1"
            android:textColor="@color/white"
            android:hint="@string/login_password"
            android:textColorHint="@color/white"
            />
        <Button
            android:text="@string/login_signin"
            android:id="@+id/login_signin_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            />
        <TextView
            android:id="@+id/login_forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_password"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:textColor="@color/white"
            />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/login_ll1"
        android:id="@+id/login_ll2"
        android:orientation="horizontal"
        android:gravity="bottom|center_horizontal"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login_signup"
            android:clickable="true"
            android:textSize="20dp"
            android:textColor="@color/white"
            />

    </LinearLayout>


</LinearLayout>
